# Gravitee-API-Masters-Quiz-Game

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: render-deploy.yml
admin-console/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf
admin-console/css/: styles.css
admin-console/js/: api.js  app.js  theme.js
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  categories.py  games.py  questions.py  results.py  scoreboard.py  settings.py
buzzer-firmware/: CMakeLists.txt  QUICKSTART.md  README.md  prj.conf  promicro_nrf52840.overlay
buzzer-firmware/src/: battery.c  battery.h  button.c  button.h  buzzer_service.c  buzzer_service.h  config.h  led.c  led.h  main.c
game-client/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf
game-client/css/: styles.css
game-client/js/: api.js  app.js  buzzer-ui.js  buzzer.js  i18n.js  particles.js  theme.js
k8s/: README.md  admin-console.yaml  backend.yaml  configmaps.yaml  database.yaml  deploy.sh  game-client.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  scoreboard.yaml  secrets.yaml
scoreboard/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf
scoreboard/css/: styles.css
scoreboard/js/: scoreboard.js
